// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select disabled select has a different style 1`] = `
.c2 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c2 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #57666E;
}

.c0:focus {
  border-color: #0080A5;
}

.c6 {
  background-color: #FFFFFF;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  display: none;
  position: absolute;
  width: 100%;
}

.c7 {
  border-radius: var(--border-radius);
  list-style-type: none;
  margin: 0;
  max-height: 128px;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  overflow-y: auto;
  padding: 0;
  width: 100%;
}

.c7:focus {
  outline: none;
}

.c7:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c7:not(input):not(textarea):not(button):focus {
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: inherit;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 32px;
  line-height: 32px;
  overflow: hidden;
  padding: 0 8px 0 var(--spacing-4x);
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c8:hover,
.c8:focus {
  background-color: #D9DDE2;
}

.c1 {
  position: relative;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #D9DDE2;
  border-radius: var(--border-radius);
  box-shadow: none;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 32px;
  margin-top: var(--spacing-half);
  padding-right: var(--spacing-1x);
  width: 100%;
}

.c3:hover {
  cursor: default;
}

.c3 svg {
  color: #9CA7B4;
}

.c4 {
  background-color: #F1F2F2;
  border: none;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  caret-color: transparent;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  max-height: 100%;
  min-width: 0;
  outline: none;
  overflow: hidden;
  padding: var(--spacing-1x) 0 var(--spacing-1x) var(--spacing-1x);
  text-overflow: ellipsis;
  white-space: nowrap;
  width: 100%;
}

.c4:hover {
  cursor: default;
}

.c4::-webkit-input-placeholder {
  color: #9CA7B4;
  font-size: 0.875rem;
}

.c4::-moz-placeholder {
  color: #9CA7B4;
  font-size: 0.875rem;
}

.c4:-ms-input-placeholder {
  color: #9CA7B4;
  font-size: 0.875rem;
}

.c4::placeholder {
  color: #9CA7B4;
  font-size: 0.875rem;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  class="c0 c1"
>
  <label
    class="c2"
  >
    Select an option
  </label>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-owns="listbox_undefined"
    class="c3"
    data-testid="input-wrapper"
    disabled=""
  >
    <input
      aria-autocomplete="list"
      aria-controls="listbox_undefined"
      aria-label="Select an option"
      aria-multiline="false"
      class="c4"
      data-testid="input"
      disabled=""
      type="text"
      value=""
    />
    <button
      class="c5"
      data-testid="arrow"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <svg
        color="currentColor"
        focusable="false"
        height="16"
        width="16"
      />
    </button>
  </div>
  <div
    class="c6"
    role="listbox"
    tabindex="-1"
  >
    <ul
      class="c7"
      id="listbox_undefined"
      role="presentation"
      tabindex="0"
    >
      <li
        aria-label="Ontario"
        aria-selected="false"
        class="c8"
        id="listbox_undefined_on"
        role="option"
      >
        Ontario
      </li>
      <li
        aria-label="Quebec"
        aria-selected="false"
        class="c8"
        id="listbox_undefined_qc"
        role="option"
      >
        Quebec
      </li>
      <li
        aria-label="British Columbia"
        aria-selected="false"
        class="c8"
        id="listbox_undefined_bc"
        role="option"
      >
        British Columbia
      </li>
      <li
        aria-label="Alberta"
        aria-selected="false"
        class="c8"
        id="listbox_undefined_ab"
        role="option"
      >
        Alberta
      </li>
      <li
        aria-label="Manitoba"
        aria-selected="false"
        class="c8"
        id="listbox_undefined_mb"
        role="option"
      >
        Manitoba
      </li>
      <li
        aria-label="Saskatchewan"
        aria-selected="false"
        class="c8"
        id="listbox_undefined_sk"
        role="option"
      >
        Saskatchewan
      </li>
      <li
        aria-label="Nova Scotia"
        aria-selected="false"
        class="c8"
        id="listbox_undefined_ns"
        role="option"
      >
        Nova Scotia
      </li>
      <li
        aria-label="New Brunswick"
        aria-selected="false"
        class="c8"
        id="listbox_undefined_nb"
        role="option"
      >
        New Brunswick
      </li>
      <li
        aria-label="Newfoundland and Labrador"
        aria-selected="false"
        class="c8"
        id="listbox_undefined_nl"
        role="option"
      >
        Newfoundland and Labrador
      </li>
      <li
        aria-label="Prince Edward Island"
        aria-selected="false"
        class="c8"
        id="listbox_undefined_pe"
        role="option"
      >
        Prince Edward Island
      </li>
      <li
        aria-label="Northwest Territories"
        aria-selected="false"
        class="c8"
        id="listbox_undefined_nt"
        role="option"
      >
        Northwest Territories
      </li>
      <li
        aria-label="Nunavut"
        aria-selected="false"
        class="c8"
        id="listbox_undefined_nu"
        role="option"
      >
        Nunavut
      </li>
      <li
        aria-label="Yukon"
        aria-selected="false"
        class="c8"
        id="listbox_undefined_yt"
        role="option"
      >
        Yukon
      </li>
    </ul>
  </div>
</div>
`;

exports[`Select invalid select has a different style 1`] = `
Array [
  .c3 {
  color: #A40C2E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0 0 var(--spacing-half);
}

.c5 {
  margin: 0 0 0 var(--spacing-base);
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c2 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #A40C2E;
}

.c0:focus {
  border-color: #A40C2E;
}

.c9 {
  background-color: #FFFFFF;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  display: none;
  position: absolute;
  width: 100%;
}

.c10 {
  border-radius: var(--border-radius);
  list-style-type: none;
  margin: 0;
  max-height: 128px;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  overflow-y: auto;
  padding: 0;
  width: 100%;
}

.c10:focus {
  outline: none;
}

.c10:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c10:not(input):not(textarea):not(button):focus {
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: inherit;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 32px;
  line-height: 32px;
  overflow: hidden;
  padding: 0 8px 0 var(--spacing-4x);
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c11:hover,
.c11:focus {
  background-color: #D9DDE2;
}

.c1 {
  position: relative;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #A40C2E;
  border-radius: var(--border-radius);
  box-shadow: none;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 32px;
  margin-top: var(--spacing-half);
  padding-right: var(--spacing-1x);
  width: 100%;
}

.c6:hover {
  cursor: pointer;
}

.c6 svg {
  color: #57666E;
}

.c7 {
  background-color: #FFFFFF;
  border: none;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  caret-color: transparent;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  max-height: 100%;
  min-width: 0;
  outline: none;
  overflow: hidden;
  padding: var(--spacing-1x) 0 var(--spacing-1x) var(--spacing-1x);
  text-overflow: ellipsis;
  white-space: nowrap;
  width: 100%;
}

.c7:hover {
  cursor: pointer;
}

.c7::-webkit-input-placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c7::-moz-placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c7:-ms-input-placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c7::placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
    class="c0 c1"
  >
    <label
      class="c2"
    >
      Select an option
    </label>
    <div
      aria-live="polite"
      class="c3"
      id="undefined_invalid"
      role="alert"
    >
      <div
        class="c4"
      >
        <svg
          color="currentColor"
          focusable="false"
          height="16"
          width="16"
        />
      </div>
      <label
        class="c5"
      >
        You must select an option
      </label>
    </div>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="listbox_undefined"
      class="c6"
      data-testid="input-wrapper"
    >
      <input
        aria-autocomplete="list"
        aria-controls="listbox_undefined"
        aria-label="Select an option"
        aria-multiline="false"
        class="c7"
        data-testid="input"
        type="text"
        value=""
      />
      <button
        class="c8"
        data-testid="arrow"
        tabindex="-1"
        type="button"
      >
        <svg
          color="currentColor"
          focusable="false"
          height="16"
          width="16"
        />
      </button>
    </div>
    <div
      class="c9"
      role="listbox"
      tabindex="-1"
    >
      <ul
        class="c10"
        id="listbox_undefined"
        role="presentation"
        tabindex="0"
      >
        <li
          aria-label="Ontario"
          aria-selected="false"
          class="c11"
          id="listbox_undefined_on"
          role="option"
        >
          Ontario
        </li>
        <li
          aria-label="Quebec"
          aria-selected="false"
          class="c11"
          id="listbox_undefined_qc"
          role="option"
        >
          Quebec
        </li>
        <li
          aria-label="British Columbia"
          aria-selected="false"
          class="c11"
          id="listbox_undefined_bc"
          role="option"
        >
          British Columbia
        </li>
        <li
          aria-label="Alberta"
          aria-selected="false"
          class="c11"
          id="listbox_undefined_ab"
          role="option"
        >
          Alberta
        </li>
        <li
          aria-label="Manitoba"
          aria-selected="false"
          class="c11"
          id="listbox_undefined_mb"
          role="option"
        >
          Manitoba
        </li>
        <li
          aria-label="Saskatchewan"
          aria-selected="false"
          class="c11"
          id="listbox_undefined_sk"
          role="option"
        >
          Saskatchewan
        </li>
        <li
          aria-label="Nova Scotia"
          aria-selected="false"
          class="c11"
          id="listbox_undefined_ns"
          role="option"
        >
          Nova Scotia
        </li>
        <li
          aria-label="New Brunswick"
          aria-selected="false"
          class="c11"
          id="listbox_undefined_nb"
          role="option"
        >
          New Brunswick
        </li>
        <li
          aria-label="Newfoundland and Labrador"
          aria-selected="false"
          class="c11"
          id="listbox_undefined_nl"
          role="option"
        >
          Newfoundland and Labrador
        </li>
        <li
          aria-label="Prince Edward Island"
          aria-selected="false"
          class="c11"
          id="listbox_undefined_pe"
          role="option"
        >
          Prince Edward Island
        </li>
        <li
          aria-label="Northwest Territories"
          aria-selected="false"
          class="c11"
          id="listbox_undefined_nt"
          role="option"
        >
          Northwest Territories
        </li>
        <li
          aria-label="Nunavut"
          aria-selected="false"
          class="c11"
          id="listbox_undefined_nu"
          role="option"
        >
          Nunavut
        </li>
        <li
          aria-label="Yukon"
          aria-selected="false"
          class="c11"
          id="listbox_undefined_yt"
          role="option"
        >
          Yukon
        </li>
      </ul>
    </div>
  </div>,
  .c0 {
  border: 0 !important;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px !important;
  overflow: hidden;
  padding: 0 !important;
  position: absolute !important;
  width: 1px !important;
}

<input
    class="c0"
    name="undefined_skip"
    type="radio"
    value="skip"
  />,
  .c0 {
  --border-radius: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  border: 1px solid #57666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #57666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  min-height: 3rem;
  padding: var(--spacing-1x);
  text-align: center;
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
}

.c0:hover {
  background: #D9DDE2;
  border-color: #D9DDE2;
}

input[type="checkbox"]:checked + .c0,
input[type="radio"]:checked + .c0 {
  background: #0080A5;
  border-color: #0080A5;
  color: #FFFFFF;
}

input[type="checkbox"]:focus + .c0,
input[type="radio"]:focus + .c0 {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c0:not(input):not(textarea):not(button):focus {
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

input[type="checkbox"]:disabled + .c0,
input[type="radio"]:disabled + .c0 {
  background: #F1F2F2;
  border-color: #D9DDE2;
  color: #9CA7B4;
  cursor: auto;
}

.c0 b {
  font-size: 1.5rem;
  font-weight: var(--font-normal);
  line-height: 2.5rem;
}

.c0 svg {
  color: inherit;
  height: 3rem;
  width: 3rem;
}

<label
    class="c0"
  >
    Skip this question
  </label>,
]
`;

exports[`Select matches the snapshot 1`] = `
Array [
  .c2 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c2 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #57666E;
}

.c0:focus {
  border-color: #0080A5;
}

.c6 {
  background-color: #FFFFFF;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  display: none;
  position: absolute;
  width: 100%;
}

.c7 {
  border-radius: var(--border-radius);
  list-style-type: none;
  margin: 0;
  max-height: 128px;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  overflow-y: auto;
  padding: 0;
  width: 100%;
}

.c7:focus {
  outline: none;
}

.c7:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c7:not(input):not(textarea):not(button):focus {
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: inherit;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 32px;
  line-height: 32px;
  overflow: hidden;
  padding: 0 8px 0 var(--spacing-4x);
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c8:hover,
.c8:focus {
  background-color: #D9DDE2;
}

.c1 {
  position: relative;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #57666E;
  border-radius: var(--border-radius);
  box-shadow: none;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 32px;
  margin-top: var(--spacing-half);
  padding-right: var(--spacing-1x);
  width: 100%;
}

.c3:hover {
  cursor: pointer;
}

.c3 svg {
  color: #57666E;
}

.c4 {
  background-color: #FFFFFF;
  border: none;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  caret-color: transparent;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  max-height: 100%;
  min-width: 0;
  outline: none;
  overflow: hidden;
  padding: var(--spacing-1x) 0 var(--spacing-1x) var(--spacing-1x);
  text-overflow: ellipsis;
  white-space: nowrap;
  width: 100%;
}

.c4:hover {
  cursor: pointer;
}

.c4::-webkit-input-placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c4::-moz-placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c4:-ms-input-placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c4::placeholder {
  color: #57666E;
  font-size: 0.875rem;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
    class="c0 c1"
  >
    <label
      class="c2"
    >
      Select an option
    </label>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="listbox_undefined"
      class="c3"
      data-testid="input-wrapper"
    >
      <input
        aria-autocomplete="list"
        aria-controls="listbox_undefined"
        aria-label="Select an option"
        aria-multiline="false"
        class="c4"
        data-testid="input"
        type="text"
        value=""
      />
      <button
        class="c5"
        data-testid="arrow"
        tabindex="-1"
        type="button"
      >
        <svg
          color="currentColor"
          focusable="false"
          height="16"
          width="16"
        />
      </button>
    </div>
    <div
      class="c6"
      role="listbox"
      tabindex="-1"
    >
      <ul
        class="c7"
        id="listbox_undefined"
        role="presentation"
        tabindex="0"
      >
        <li
          aria-label="Ontario"
          aria-selected="false"
          class="c8"
          id="listbox_undefined_on"
          role="option"
        >
          Ontario
        </li>
        <li
          aria-label="Quebec"
          aria-selected="false"
          class="c8"
          id="listbox_undefined_qc"
          role="option"
        >
          Quebec
        </li>
        <li
          aria-label="British Columbia"
          aria-selected="false"
          class="c8"
          id="listbox_undefined_bc"
          role="option"
        >
          British Columbia
        </li>
        <li
          aria-label="Alberta"
          aria-selected="false"
          class="c8"
          id="listbox_undefined_ab"
          role="option"
        >
          Alberta
        </li>
        <li
          aria-label="Manitoba"
          aria-selected="false"
          class="c8"
          id="listbox_undefined_mb"
          role="option"
        >
          Manitoba
        </li>
        <li
          aria-label="Saskatchewan"
          aria-selected="false"
          class="c8"
          id="listbox_undefined_sk"
          role="option"
        >
          Saskatchewan
        </li>
        <li
          aria-label="Nova Scotia"
          aria-selected="false"
          class="c8"
          id="listbox_undefined_ns"
          role="option"
        >
          Nova Scotia
        </li>
        <li
          aria-label="New Brunswick"
          aria-selected="false"
          class="c8"
          id="listbox_undefined_nb"
          role="option"
        >
          New Brunswick
        </li>
        <li
          aria-label="Newfoundland and Labrador"
          aria-selected="false"
          class="c8"
          id="listbox_undefined_nl"
          role="option"
        >
          Newfoundland and Labrador
        </li>
        <li
          aria-label="Prince Edward Island"
          aria-selected="false"
          class="c8"
          id="listbox_undefined_pe"
          role="option"
        >
          Prince Edward Island
        </li>
        <li
          aria-label="Northwest Territories"
          aria-selected="false"
          class="c8"
          id="listbox_undefined_nt"
          role="option"
        >
          Northwest Territories
        </li>
        <li
          aria-label="Nunavut"
          aria-selected="false"
          class="c8"
          id="listbox_undefined_nu"
          role="option"
        >
          Nunavut
        </li>
        <li
          aria-label="Yukon"
          aria-selected="false"
          class="c8"
          id="listbox_undefined_yt"
          role="option"
        >
          Yukon
        </li>
      </ul>
    </div>
  </div>,
  .c0 {
  border: 0 !important;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px !important;
  overflow: hidden;
  padding: 0 !important;
  position: absolute !important;
  width: 1px !important;
}

<input
    class="c0"
    name="undefined_skip"
    type="radio"
    value="skip"
  />,
  .c0 {
  --border-radius: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  border: 1px solid #57666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #57666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  min-height: 3rem;
  padding: var(--spacing-1x);
  text-align: center;
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
}

.c0:hover {
  background: #D9DDE2;
  border-color: #D9DDE2;
}

input[type="checkbox"]:checked + .c0,
input[type="radio"]:checked + .c0 {
  background: #0080A5;
  border-color: #0080A5;
  color: #FFFFFF;
}

input[type="checkbox"]:focus + .c0,
input[type="radio"]:focus + .c0 {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c0:not(input):not(textarea):not(button):focus {
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

input[type="checkbox"]:disabled + .c0,
input[type="radio"]:disabled + .c0 {
  background: #F1F2F2;
  border-color: #D9DDE2;
  color: #9CA7B4;
  cursor: auto;
}

.c0 b {
  font-size: 1.5rem;
  font-weight: var(--font-normal);
  line-height: 2.5rem;
}

.c0 svg {
  color: inherit;
  height: 3rem;
  width: 3rem;
}

<label
    class="c0"
  >
    Skip this question
  </label>,
]
`;

exports[`Select mobile select has a different style 1`] = `
.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #57666E;
}

.c0:focus {
  border-color: #0080A5;
}

.c5 {
  background-color: #FFFFFF;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  display: none;
  position: absolute;
  width: 100%;
}

.c6 {
  border-radius: var(--border-radius);
  list-style-type: none;
  margin: 0;
  max-height: 160px;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  overflow-y: auto;
  padding: 0;
  width: 100%;
}

.c6:focus {
  outline: none;
}

.c6:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c6:not(input):not(textarea):not(button):focus {
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: inherit;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  height: 40px;
  line-height: 40px;
  overflow: hidden;
  padding: 0 16px 0 var(--spacing-5x);
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c7:hover,
.c7:focus {
  background-color: #D9DDE2;
}

.c1 {
  position: relative;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #57666E;
  border-radius: var(--border-radius);
  box-shadow: none;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  margin-top: 0;
  padding-right: var(--spacing-1x);
  width: 100%;
}

.c2:hover {
  cursor: pointer;
}

.c2 svg {
  color: #57666E;
}

.c3 {
  background-color: #FFFFFF;
  border: none;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  caret-color: transparent;
  font-size: 1rem;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  max-height: 100%;
  min-width: 0;
  outline: none;
  overflow: hidden;
  padding: var(--spacing-1x) 0 var(--spacing-1x) var(--spacing-1x);
  text-overflow: ellipsis;
  white-space: nowrap;
  width: 100%;
}

.c3:hover {
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #57666E;
  font-size: 1rem;
}

.c3::-moz-placeholder {
  color: #57666E;
  font-size: 1rem;
}

.c3:-ms-input-placeholder {
  color: #57666E;
  font-size: 1rem;
}

.c3::placeholder {
  color: #57666E;
  font-size: 1rem;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  class="c0 c1"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-owns="listbox_undefined"
    class="c2"
    data-testid="input-wrapper"
  >
    <input
      aria-autocomplete="list"
      aria-controls="listbox_undefined"
      aria-label="Select an option"
      aria-multiline="false"
      class="c3"
      data-testid="input"
      type="text"
      value=""
    />
    <button
      class="c4"
      data-testid="arrow"
      tabindex="-1"
      type="button"
    >
      <svg
        color="currentColor"
        focusable="false"
        height="24"
        width="24"
      />
    </button>
  </div>
  <div
    class="c5"
    role="listbox"
    tabindex="-1"
  >
    <ul
      class="c6"
      id="listbox_undefined"
      role="presentation"
      tabindex="0"
    >
      <li
        aria-label="Ontario"
        aria-selected="false"
        class="c7"
        id="listbox_undefined_on"
        role="option"
      >
        Ontario
      </li>
      <li
        aria-label="Quebec"
        aria-selected="false"
        class="c7"
        id="listbox_undefined_qc"
        role="option"
      >
        Quebec
      </li>
      <li
        aria-label="British Columbia"
        aria-selected="false"
        class="c7"
        id="listbox_undefined_bc"
        role="option"
      >
        British Columbia
      </li>
      <li
        aria-label="Alberta"
        aria-selected="false"
        class="c7"
        id="listbox_undefined_ab"
        role="option"
      >
        Alberta
      </li>
      <li
        aria-label="Manitoba"
        aria-selected="false"
        class="c7"
        id="listbox_undefined_mb"
        role="option"
      >
        Manitoba
      </li>
      <li
        aria-label="Saskatchewan"
        aria-selected="false"
        class="c7"
        id="listbox_undefined_sk"
        role="option"
      >
        Saskatchewan
      </li>
      <li
        aria-label="Nova Scotia"
        aria-selected="false"
        class="c7"
        id="listbox_undefined_ns"
        role="option"
      >
        Nova Scotia
      </li>
      <li
        aria-label="New Brunswick"
        aria-selected="false"
        class="c7"
        id="listbox_undefined_nb"
        role="option"
      >
        New Brunswick
      </li>
      <li
        aria-label="Newfoundland and Labrador"
        aria-selected="false"
        class="c7"
        id="listbox_undefined_nl"
        role="option"
      >
        Newfoundland and Labrador
      </li>
      <li
        aria-label="Prince Edward Island"
        aria-selected="false"
        class="c7"
        id="listbox_undefined_pe"
        role="option"
      >
        Prince Edward Island
      </li>
      <li
        aria-label="Northwest Territories"
        aria-selected="false"
        class="c7"
        id="listbox_undefined_nt"
        role="option"
      >
        Northwest Territories
      </li>
      <li
        aria-label="Nunavut"
        aria-selected="false"
        class="c7"
        id="listbox_undefined_nu"
        role="option"
      >
        Nunavut
      </li>
      <li
        aria-label="Yukon"
        aria-selected="false"
        class="c7"
        id="listbox_undefined_yt"
        role="option"
      >
        Yukon
      </li>
    </ul>
  </div>
</div>
`;
